cargo-smart-release/tests/changelog/write_and_parse/snapshots/integration__changelog__write_and_parse__all_section_types_round_trips_lossy-9.snap
---
source: cargo-smart-release/tests/changelog/write_and_parse/mod.rs
expression: buf.to_str()?

---
# Changelog

my very own header


